# proyectoIADA

./: README.md  pyproject.toml
data/: entrada.txt  entrada2.txt  salida_FB.txt
src/logica/: modciFB.py  modciPD.py  modciV.py  utils.py
src/proyectoIADA/: modciFB.py  utils.py
src/vista/: benckmarks.py  interfazRS.py
tests/outputs/: reporte_resultados.csv  reporte_resultados.md
