[project]
name = "proyecto1"
version = "0.1.0"
description = ""
authors = [
    {name = "Heisuzul",email = "heidy.mina@correounivalle.edu.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "proyecto1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
